@@ -1,3 +1,15 @@
+2013-01-31  Alan Modra  <amodra@gmail.com>
+
+	* elf64-ppc.c (build_plt_stub): Correct plt stub branch to glink.
+
+	2013-01-28  Alan Modra  <amodra@gmail.com>
+	* elf64-ppc.c: Use %T to print symbols names and remove redundant
+	"relocation" in error messages throughout file.
+	(ppc64_elf_relocate_section): Remove sibling call error message,
+	replace with "call lacks nop".  Specially report errors for
+	branches to function entry points via OPD lookup and branches
+	to stubs.  Remove NULL symbol handling now done by %T.
+
 2013-01-22  Alan Modra  <amodra@gmail.com>
 
 	Apply mainline patches
